# wind-django-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  README.md  example.env  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt
.github/workflows/: test-and-coverage-for-dev.yml  test-and-coverage-for-prod.yml
api/: factories.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
api/fixtures/: seed.json
api/migrations/: 0001_initial.py  0002_alter_anemometer_latitude_alter_anemometer_longitude_and_more.py
windforlife/: asgi.py  settings.py  urls.py  wsgi.py
windforlife/settings/: base.py  dev.py  prod.py
windforlife/wsgi/: __init__.py  dev.py  prod.py
