[project]
name = "wind-django-api"
version = "0.1.0"
description = "The WindForLife API is a Django REST Framework (DRF) based API for collecting and analyzing wind data from anemometers."
authors = [
    {name = "Dieuveille",email = "dieuveilleellenga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "environ (>=1.0,<2.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "django-filter (>=25.1,<26.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-django = "^4.11.1"
pytest-cov = "^6.1.1"
django-debug-toolbar = "^5.2.0"
factory-boy = "^3.3.3"
faker = "^37.3.0"
freezegun = "^1.5.2"
coverage = "^7.8.2"
black = "^25.1.0"
ruff = "^0.11.13"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
django-stubs = "^5.2.0"
djangorestframework-stubs = "^3.16.0"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
show_error_codes = true
strict_optional = true

[tool.django-stubs]
django_settings_module = "windforlife.settings.dev"

